tests/semantic_cases/invalid/writestring_non_string_arg.ob0
(* INVALID: WriteString builtin argument is not a string literal *)
MODULE Main;
BEGIN
  WriteString(1)
END Main.
